# swagger.json
@@ -42,7 +42,7 @@
         }
       }
     },
-    "/user/": {
+    "/users/": {
       "get": {
         "description": "",
         "produces": [
@@ -51,6 +51,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -95,7 +98,7 @@
         }
       }
     },
-    "/user/{id}": {
+    "/users/{id}": {
       "get": {
         "description": "",
         "produces": [
@@ -116,8 +119,8 @@
           "400": {
             "description": "Bad Request"
           },
-          "404": {
-            "description": "Not Found"
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -156,17 +159,14 @@
           "204": {
             "description": "No Content"
           },
-          "400": {
-            "description": "Bad Request"
-          },
           "401": {
             "description": "Unauthorized"
           },
-          "404": {
-            "description": "Not Found"
-          },
           "412": {
             "description": "Precondition Failed"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
@@ -190,13 +190,13 @@
           "401": {
             "description": "Unauthorized"
           },
-          "404": {
-            "description": "Not Found"
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
-    "/track/": {
+    "/info/": {
       "get": {
         "description": "",
         "produces": [
@@ -210,32 +210,71 @@
             "description": "Internal Server Error"
           }
         }
+      }
+    },
+    "/info/{id}": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       },
       "post": {
         "description": "",
         "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "title": {
+                "birthday": {
                   "example": "any"
                 },
-                "artist": {
+                "color": {
                   "example": "any"
                 },
-                "duration": {
+                "nickname": {
                   "example": "any"
                 },
-                "genre": {
+                "hairColor": {
                   "example": "any"
                 },
-                "album": {
+                "hobby": {
                   "example": "any"
                 },
-                "releaseDate": {
+                "address": {
+                  "example": "any"
+                },
+                "url": {
+                  "example": "any"
+                },
+                "city": {
                   "example": "any"
                 }
               }
@@ -259,33 +298,6 @@
             "description": "Internal Server Error"
           }
         }
-      }
-    },
-    "/track/{id}": {
-      "get": {
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
       },
       "put": {
         "description": "",
@@ -302,22 +314,28 @@
             "schema": {
               "type": "object",
               "properties": {
-                "title": {
+                "birthday": {
                   "example": "any"
                 },
-                "artist": {
+                "color": {
                   "example": "any"
                 },
-                "duration": {
+                "nickname": {
                   "example": "any"
                 },
-                "genre": {
+                "hairColor": {
                   "example": "any"
                 },
-                "album": {
+                "hobby": {
                   "example": "any"
                 },
-                "releaseDate": {
+                "address": {
+                  "example": "any"
+                },
+                "url": {
+                  "example": "any"
+                },
+                "city": {
                   "example": "any"
                 }
               }
